--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-2.cfg
@@ -24,9 +24,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = #RSR-light-obruc-2-titl
+	title = #RSR-light-obruc-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-light-obruc-2-desc
+	description = #RSR-light-obruc-250-desc
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 
 	mass = 0.03
