--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -102,8 +102,8 @@ Localization
 		#RSR-light-obruc-1-titl = RSR Light Emitting Decoration LED-3
 		#RSR-light-obruc-1-desc = Light belt
 
-		#RSR-light-obruc-2-titl = RSR Light Emitting Decoration LED-4
-		#RSR-light-obruc-2-desc = Light belt 2
+		#RSR-light-obruc-250-titl = RSR Light Emitting Decoration LED-4 (2.5m)
+		#RSR-light-obruc-250-desc = Light belt four of these will encircle a 2.5m rocket
 
 		#RSR-light-spot-titl = RSR Spotlight
 		#RSR-light-spot-desc = For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
