--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-obruc-125.cfg
@@ -1,4 +1,4 @@
-// rsr-light-obruc-1.cfg v1.8.99.3
+// rsr-light-obruc-125.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-light-obruc-1
+	name = rsr-light-obruc-125
 	oldName = obrucLight
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -24,9 +24,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = #RSR-light-obruc-1-titl
+	title = #RSR-light-obruc-125-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-light-obruc-1-desc
+	description = #RSR-light-obruc-125-desc
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 
 	mass = 0.015
