--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -26,7 +26,7 @@ Localization
 		#RSR-airbrake-mini-desc = Research into feasible ways to slow down a plane in mid-air showed that loose hull panels are pretty great as drag-inducing deceleration devices. The discovery led to the invention of the Aerodynamically Integrated Retrograde Braking Robustly Armed Kinetic Extending System (A.I.R.B.R.A.K.E.S.), which is now popular mostly as a cheap alternative to longer runways. C7 Engineers are still trying to come up with a shorter name for such a long acronym.
 
 	// Parts\Cargo
-		#RSR-bay-cargo-250-1-titl = RSR Cargo Bay
+		#RSR-bay-cargo-250-1-titl = RSR Cargo Bay 2.5m
 		#RSR-bay-cargo-250-1-desc = Est adipisicing do laborum laborum laborum in tempor excepteur. Sunt nisi enim occaecat exercitation nisi commodo magna. Quis eu occaecat pariatur ut enim enim laborum enim dolore sunt proident deserunt eu qui.
 
 		#RSR-bay-cargo-250-2-titl = RSR Cargo Bay 2
@@ -53,39 +53,39 @@ Localization
 		#RSR-coupling-sep-250-desc = Created as a substitute for infamous Zipper X-1
 
 	// Parts\Ground
-		#RustyStarRockets-RSRGearLarge-titl = RSR Extra Large Landing Gear
-		#RustyStarRockets-RSRGearLarge-desc = Heavy-duty retractable landing gear.
+		#RSS-Gear-Large-titl = RSR Extra Large Landing Gear
+		#RSS-Gear-Large-desc = Heavy-duty retractable landing gear.
 
-		#RustyStarRockets-RSRGearFixed-titl = RSR Fixed Landing Gear
-		#RustyStarRockets-RSRGearFixed-desc = Simple wheel-on-a-stick Landing Gear to bring your birds down safely. (That means your airplanes, LightYear Co. does not encourage attempting to attach landing gear to actual birds)
+		#RSS-Gear-Fixed-titl = RSR Fixed Landing Gear
+		#RSS-Gear-Fixed-desc = Simple wheel-on-a-stick Landing Gear to bring your birds down safely. (That means your airplanes, LightYear Co. does not encourage attempting to attach landing gear to actual birds)
 
-		#RustyStarRockets-RSRGearFree-titl = RSR Steerable Landing Gear
-		#RustyStarRockets-RSRGearFree-desc = Simple wheel with steering actuation. It has become evident that aerodynamic control surfaces don't offer much control while slowly taxiing on the ground. Hopefully these wheels will reduce the number of low altitude low speed collisions with buildings. And Kerbals.
+		#RSS-Gear-Free-titl = RSR Steerable Landing Gear
+		#RSS-Gear-Free-desc = Simple wheel with steering actuation. It has become evident that aerodynamic control surfaces don't offer much control while slowly taxiing on the ground. Hopefully these wheels will reduce the number of low altitude low speed collisions with buildings. And Kerbals.
 
-		#RustyStarRockets-RSRGearMedium-titl = RSR Large Landing Gear
-		#RustyStarRockets-RSRGearMedium-desc = Heavy-duty retractable landing gear. With it's four large tires and sturdy assembly it's the gear of choice for heavy cargo planes and airliners.
+		#RSS-Gear-Medium-titl = RSR Large Landing Gear
+		#RSS-Gear-Medium-desc = Heavy-duty retractable landing gear. With it's four large tires and sturdy assembly it's the gear of choice for heavy cargo planes and airliners.
 
-		#RustyStarRockets-RSRGearSmall-titl = RSR Medium Landing Gear
-		#RustyStarRockets-RSRGearSmall-desc = High performance retractable landing gear. This bigger version features two large tires to support big and heavy planes. The longer assembly allows for improved ground clearance. //Comes with shock absorber, steering and a built-in spotlights.
+		#RSS-Gear-Small-titl = RSR Medium Landing Gear
+		#RSS-Gear-Small-desc = High performance retractable landing gear. This bigger version features two large tires to support big and heavy planes. The longer assembly allows for improved ground clearance. //Comes with shock absorber, steering and a built-in spotlights.
 
-		#RustyStarRockets-RSRSmallGearBay-titl = RSR Small Landing Gear
-		#RustyStarRockets-RSRSmallGearBay-desc = High performance retractable landing gear. Comes with shock absorber, steering and a built-in spotlights. If we didn't tell you, you'd never know that most of those components were salvaged from scrapped machinery... oh.
+		#RSS-RSRSmallGearBay-titl = RSR Small Landing Gear
+		#RSS-RSRSmallGearBay-desc = High performance retractable landing gear. Comes with shock absorber, steering and a built-in spotlights. If we didn't tell you, you'd never know that most of those components were salvaged from scrapped machinery... oh.
 
 	// Parts\Ground\RSRlandingLegLT-1
-		#RustyStarRockets-RSRlandingLeg1-titl = LT-1 Landing Struts
-		#RustyStarRockets-RSRlandingLeg1-desc = What is better than a good looking rocket? A rocket with nice legs.
+		#RSS-leg-landing-1-titl = LT-1 Landing Struts
+		#RSS-leg-landing-1-desc = What is better than a good looking rocket? A rocket with nice legs.
 
 	// Parts\Ground\RSRlandingLegLT-2
-		#RustyStarRockets-RSRlandingLeg1-2-titl = RSR Landing Strut
-		#RustyStarRockets-RSRlandingLeg1-2-desc = What is better than a good looking rocket? A rocket with nice legs.
+		#RSS-leg-landing-1-2-titl = RSR Landing Strut
+		#RSS-leg-landing-1-2-desc = What is better than a good looking rocket? A rocket with nice legs.
 
 	// Parts\Ground\RSRlandingLegLT-5
-		#RustyStarRockets-RSRminiLandingLeg-titl = RSR Micro Landing Strut
-		#RustyStarRockets-RSRminiLandingLeg-desc = What is better than a good looking rocket? A rocket with nice legs.
+		#RSS-RSRminiLandingLeg-titl = RSR Micro Landing Strut
+		#RSS-RSRminiLandingLeg-desc = What is better than a good looking rocket? A rocket with nice legs.
 
 	// Parts\Lights
-		#RSR-light-bulb-2m-titl = RSR Bulbinator
-		#RSR-light-bulb-2m-desc = Omnidirectional light. For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
+		#RSR-light-bulb-sm-titl = RSR Bulbinator (small)
+		#RSR-light-bulb-sm-desc = Omnidirectional light. For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
 
 		#RSR-light-bulb-titl = RSR Bulbinator
 		#RSR-light-bulb-desc = Omnidirectional light. For optimal results set these RGB values in VAB/SPH: 0.0 1.0 0.75
@@ -110,6 +110,10 @@ Localization
 
 		#RSR-light-strut-titl = RSR Light Emitting Decoration LED-5
 		#RSR-light-strut-desc = Light
+
+	// Parts\Thermal
+		#RSR-heatshield-inflatable-250-titl = Heat Shield 2.5m (inflatable 10m)
+		#RSR-heatshield-inflatable-250-desc = Based on the design of a child's toy, this heat shield uses a set of inflatable rings covered with a thermal blanket to provide a generous 10 meter heat shield for reentry and deceleration, and the aerodynamic qualities of an untethered bouncy ca2.5m sinflatable tle.
 
 // 0.8.99.2
 	// RustyStarRockets\Parts\Antenna
