--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-belt-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-belt-250.cfg
@@ -76,6 +76,7 @@ PART
 		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
 		toggleAction = True
 		defaultActionGroup = Lights
+		disableColorPicker = false
 		redCurve
 		{
 			key = 0 0 0 3
