--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb-sm.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb-sm.cfg
@@ -1,4 +1,4 @@
-// rsr-light-bulb-2m.cfg v1.8.99.3
+// rsr-light-bulb-sm.cfg v1.8.99.3
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 18 Mar 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-light-bulb-2m
+	name = rsr-light-bulb-sm
 	oldName = RSR_bulb1
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -24,9 +24,9 @@ PART
 	category = Utility
 	subcategory = 0
 
-	title = #RSR-light-bulb-2m-titl
+	title = #RSR-light-bulb-sm-titl
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-light-bulb-2m-desc
+	description = #RSR-light-bulb-sm-desc
 	tags = #autoLOC_6011162 // moar (more bulb candle dark flash (lamp (light shine spot torch
 
 	mass = 0.005
@@ -64,5 +64,43 @@ PART
 			isBlinking = True
 		defaultActionGroup  = Lights
 	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = False
+		useRate = True
+		toggleInEditor = True
+		toggleInFlight = True
+		toggleInFlight = True
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
+	}
+	
 
 }
