--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-e.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-e.cfg
@@ -41,24 +41,24 @@ PART
 
 	maxTemp = 2000
 
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = EmmAnim
-		startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
-		endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
-		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
-		eventAvailableEditor = True
-		eventAvailableFlight = True
-		eventAvailableEVA = True
-		evaDistance = 10
-		allowDeployLimit = True
-		revClampDirection = False
-		revClampSpeed = True
-		revClampPercent = True
-		isOneShot = False
-		defaultActionGroup  = Lights
-	}
+	// MODULE
+	// {
+	// 	name = ModuleAnimateGeneric
+	// 	animationName = EmmAnim
+	// 	startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
+	// 	endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
+	// 	actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
+	// 	eventAvailableEditor = True
+	// 	eventAvailableFlight = True
+	// 	eventAvailableEVA = True
+	// 	evaDistance = 10
+	// 	allowDeployLimit = True
+	// 	revClampDirection = False
+	// 	revClampSpeed = True
+	// 	revClampPercent = True
+	// 	isOneShot = False
+	// 	defaultActionGroup  = Lights
+	// }
 
 	MODULE
 	{
@@ -71,11 +71,12 @@ PART
 		toggleInFlight = True
 		toggleInFlight = True
 		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
 		toggleAction = True
 		defaultActionGroup = Lights
+		disableColorPicker = false
 		redCurve
 		{
 			key = 0 0 0 3
