--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
@@ -41,29 +41,29 @@ PART
 
 	maxTemp = 2000	
 
-	MODULE
-	{
-		name = ModuleLight
-		lightName = nit
-		animationName = laserAnimation
-			useAnimationDim = True
-			lightBrightenSpeed = 9
-			lightDimSpeed = 8
-		useResources = True
-			resourceName = ElectricCharge
-			resourceAmount = 0.01
-		castLight = True
-			disableColorPicker = false
-			lightR = 0.0
-			lightG = 1.0
-			lightB = 0.0
-		canBlink = True
-			blinkMin = 0.2
-			blinkMax = 2.0
-			blinkRate = 0.5
-			isBlinking = True
-		defaultActionGroup  = Lights
-	}
+	// MODULE
+	// {
+	// 	name = ModuleLight
+	// 	lightName = nit
+	// 	animationName = laserAnimation
+	// 		useAnimationDim = True
+	// 		lightBrightenSpeed = 9
+	// 		lightDimSpeed = 8
+	// 	useResources = True
+	// 		resourceName = ElectricCharge
+	// 		resourceAmount = 0.01
+	// 	castLight = True
+	// 		disableColorPicker = false
+	// 		lightR = 0.0
+	// 		lightG = 1.0
+	// 		lightB = 0.0
+	// 	canBlink = True
+	// 		blinkMin = 0.2
+	// 		blinkMax = 2.0
+	// 		blinkRate = 0.5
+	// 		isBlinking = True
+	// 	defaultActionGroup  = Lights
+	// }
 	
 	MODULE
 	{
@@ -81,6 +81,7 @@ PART
 		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
 		toggleAction = True
 		defaultActionGroup = Lights
+		disableColorPicker = false
 		redCurve
 		{
 			key = 0 0 0 3
