--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-0625.cfg
@@ -36,9 +36,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = #RSR-heatshield-0625-titl
+	title = #autoLOC_500178 // Heat Shield (0.625m)
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-heatshield-0625-desc
+	description = #autoLOC_500179 // A tiny structural heat shield
 	tags = #autoLOC_500180 // ablat drag entry insulate protect re- rocket therm
 
 	mass = 0.025
