--- a/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake-mini.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake-mini.cfg
@@ -18,7 +18,7 @@ PART
 	rescaleFactor = 0.5
 
 	attachRules = 0,1,0,0,1
-	node_attach = 0.0, 0.0, -0.025, 0.0, 0.0, 1.0, 1
+	node_attach = 0.0, 0.0, -0.025, 0.0, 0.0, 1.0, 1, 1
 
 	//CoMOffset = 0.0, -0.2, 0.2
 	//CoPOffset = 0.0, -0.2, 0.2
@@ -92,8 +92,8 @@ PART
 		VARIANT
 		{
 			name = Rusty
-			displayName = #RSR-v-stock-name
-	description = #RSR-airbrake-mini-desc
+			displayName = #RSR-v-rust-name
+			description = #RSR-v-rust-desc
 			primaryColor = #7d6523
 			secondaryColor = #ffffff
 			TEXTURE
