--- a/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake.cfg
@@ -19,7 +19,7 @@ PART
 	rescaleFactor = 1.0
 
 	attachRules = 0,1,0,0,1
-	node_attach = 0.0, 0.0, -0.025, 0.0, 0.0, 1.0, 1
+	node_attach = 0.0, 0.0, -0.025, 0.0, 0.0, 1.0, 1, 1
 
 	//CoMOffset = 0.0, -0.2, 0.2
 	//CoPOffset = 0.0, -0.2, 0.2
@@ -94,8 +94,8 @@ PART
 		VARIANT
 		{
 			name = Rusty
-			displayName = #RSR-v-stock-name
-	description = #RSR-airbrake-desc
+			displayName = #RSR-v-rust-name
+			description = #RSR-v-rust-desc
 			primaryColor = #7d6523
 			secondaryColor = #ffffff
 			TEXTURE
