--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
@@ -16,8 +16,9 @@ PART
 	bulkheadProfiles = size2, srf
 
 	attachRules = 1,0,1,1,1
-	node_stack_top = 0.0, -1.94, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -2.0, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, -1.94, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -2.0, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = heavyAerodynamics
 	entryCost = 12000
