--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-125.cfg
@@ -150,8 +150,53 @@ PART
 		name = Ablator
 		amount = 200
 		maxAmount = 200
-	}	
-	
+	}
+
+	MODULE
+	{
+		name = ModulePartVariants
+		useMultipleDragCubes = false
+		baseVariant = Rusty
+		VARIANT
+		{
+			name = Rusty
+			displayName = #RSR-v-rust-name
+			description = #RSR-v-rust-desc
+			primaryColor = #7d6523
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName = heatshield
+				mainTextureURL = RustyStar/RustyStarRockets/Assets/Thermal/hs
+			}
+			TEXTURE
+			{
+				materialName = Fairing
+				mainTextureURL = RustyStar/RustyStarRockets/Assets/Thermal/HSFairing
+			}
+			
+		}
+		
+		VARIANT
+		{
+			name = Stock
+			displayName= #RSR-v-stock-name
+			description = #RSR-v-stock-desc
+			primaryColor = #303030
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName = heatshield
+				mainTextureURL = Squad/Parts/Aero/HeatShield/heatshield
+			}
+			TEXTURE
+			{
+				materialName = Fairing
+				mainTextureURL = Squad/Parts/Aero/HeatShield/Fairing
+			}
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
