--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-drogue.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-drogue.cfg
@@ -17,7 +17,7 @@ PART
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,0,0
-	node_attach = 0.0, 0.0, 0.32469, 0.0, 0.0, -1.0
+	node_attach = 0.0, 0.0, 0.32469, 0.0, 0.0, -1.0, 1, 1
 
 	buoyancyUseCubeNamed = PACKED
 	sound_parachute_open = activate
