--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute-radial.cfg
@@ -18,8 +18,8 @@ PART
 	bulkheadProfiles = size0, srf
 
 	attachRules = 1,0,0,1,0
-	node_stack_bottom = 0.0, -0.025, 0.0, 0.0, -1.0, 0.0, 1
-	node_attach = 0.0, -0.13, 0.0, 0.0, -1.0, 0.0
+	node_stack_bottom = 0.0, -0.025, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, -0.13, 0.0, 0.0, -1.0, 0.0, 1, 1
 
 	buoyancyUseCubeNamed = PACKED
 	sound_parachute_open = activate
