--- a/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Chute/rsr-chute.cfg
@@ -21,7 +21,9 @@ PART
 	node_stack_bottom = 0.0, -0.13, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, -0.13, 0.0, 0.0, -1.0, 0.0
 
+	buoyancyUseCubeNamed = PACKED
 	sound_parachute_open = activate
+	sound_parachute_single = deploy
 
 	TechRequired = landing
 	entryCost = 4600
@@ -32,21 +34,24 @@ PART
 	title = #RSR-chute-titl
 	manufacturer = #RSS-Agency-titl
 	description = #RSR-chute-desc
+	tags = #autoLOC_500923 // arrest canopy chute decel descen drag entry fall landing re- return safe slow white
 
 	mass = 0.3
 
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
+	bodyLiftMultiplier = 0
+
+	crashTolerance = 12
+	breakingForce = 100
+	breakingTorque = 50
 
 	maxTemp = 2500
 	emissiveConstant = 0.7
 
-	breakingForce = 100
-	breakingTorque = 50
-
-	bodyLiftMultiplier = 0
 	stageOffset = -1
+	preferredStage = PARACHUTESTAGE
 
 	MODULE
 	{
