--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-0625.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size0
 
 	attachRules = 1,0,1,1,0
-	node_stack_bottom = 0.0, -0.04040, 0.0, 0.0, -1.0, 0.0
-	node_stack_top = 0.0, 0.04040, 0.0, 0.0, 1.0, 0.0
+	node_stack_top = 0.0, 0.0404, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.0404, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	sound_decoupler_fire = decouple
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
