--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-125.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,1,0
-	node_stack_bottom = 0.0, -0.16, 0.0, 0.0, -1.0, 0.0
-	node_stack_top = 0.0, 0.16, 0.0, 0.0, 1.0, 0.0
+	node_stack_top = 0.0, 0.16, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.16, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	sound_decoupler_fire = decouple
 	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
