--- a/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Coupling/rsr-coupling-sep-250.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,1,0
-	node_stack_bottom = 0.0, -0.2, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_top = 0.0, 0.2, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 0.2, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_stack_bottom = 0.0, -0.2, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	sound_decoupler_fire = decouple	
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
