--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-spot.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-spot.cfg
@@ -16,7 +16,7 @@ PART
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,0,0
-	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
+	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0, 1
 
 	TechRequired = electrics
 	entryCost = 899
