--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-0625.cfg
@@ -21,8 +21,9 @@ PART
 	bulkheadProfiles = size0
 
 	attachRules = 1,0,1,0,0
-	node_stack_bottom = 0.0, -0.0095, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 0.052, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 0.052, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.0095, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	sound_vent_medium = decouple
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
