--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-125.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-125.cfg
@@ -21,9 +21,10 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,0,0
-	node_stack_direct = 0.0, -0.00, 0.0, 0.0, -1.0, 0.0, 0
-	node_stack_bottom = 0.0, -0.17, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 0.022, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 0.022, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.17, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_stack_direct = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	CoPOffset = 0.0, 1.0, 0.0
 	CoLOffset = 0.0, -0.15, 0.0
