--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-250.cfg
@@ -21,9 +21,10 @@ PART
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,0,0
-	node_stack_direct = 0.0, -0.00, 0.0, 0.0, -1.0, 0.0, 1	
-	node_stack_bottom = 0.0, -0.367, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_top = 0.0, 0.034, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 0.034, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_stack_bottom = 0.0, -0.367, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_stack_direct = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	CoPOffset = 0.0, 1.1, 0.0
 	CoLOffset = 0.0, -0.36, 0.0
