--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
@@ -21,9 +21,10 @@ PART
 	bulkheadProfiles = size3
 
 	attachRules = 1,0,1,0,0
-	node_stack_direct = 0.0, -0.00, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.59, 0.0, 0.0, -1.0, 0.0, 3
-	node_stack_top = 0.0, 0.25, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_top = 0.0, 0.25, 0.0, 0.0, 1.0, 0.0, 3, 1
+	node_stack_direct = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_stack_bottom = 0.0, -0.59, 0.0, 0.0, -1.0, 0.0, 3, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	CoPOffset = 0.0, 1.4, 0.0
 	CoLOffset = 0.0, -0.5, 0.0
