--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
@@ -21,9 +21,10 @@ PART
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,0,1
-	node_stack_mid = 0.0, 0.34, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, 1.4, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_top = 0.0, -0.9, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, -0.9, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_stack_mid = 0.0, 0.34, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, 1.4, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	CoPOffset = 0.0, 2.5, 0.0
 	CoLOffset = 0.0, -1, 0.0
