--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-therm-rad.cfg
@@ -18,7 +18,7 @@ PART
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,1,1
-	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1, 1
 
 	TechRequired = basicScience
 	entryCost = 1700
