--- a/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Utility/rsr-crew-cabin-250.cfg
@@ -19,14 +19,11 @@ PART
 
 	vesselType = Ship
 	CrewCapacity = 4
-	INTERNAL
-	{
-		name = RSR_HH_INT
-	}
+	INTERNAL { name = RSR_HH_INT}
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.82527, 0.0, 0.0, 1.0, 0.0, 2, 1
-	node_stack_bottom = 0.0, -0.82527, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_stack_top = 0.0, 0.82527, 0.0, 0.0, 1.0, 0.0, 3, 1
+	node_stack_bottom = 0.0, -0.82527, 0.0, 0.0, -1.0, 0.0, 3, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = spaceExploration
