--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-strut.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-strut.cfg
@@ -11,7 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Parts/Utility/RSR_lights/emmStrut1 }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Lights/emmStrut1 }
 	rescaleFactor = 1.0
 	bulkheadProfiles = srf
 
@@ -60,41 +60,41 @@ PART
 		defaultActionGroup  = Lights
 	}
 
-	MODULE
-	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = False
-		useRate = True
-		toggleInEditor = True
-		toggleInFlight = True
-		toggleInFlight = True
-		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
-		toggleAction = True
-		defaultActionGroup = Lights
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
-	}
+	// MODULE
+	// {
+	// 	name = ModuleColorChanger
+	// 	shaderProperty = _EmissiveColor
+	// 	animRate = 0.8
+	// 	animState = False
+	// 	useRate = True
+	// 	toggleInEditor = True
+	// 	toggleInFlight = True
+	// 	toggleInFlight = True
+	// 	unfocusedRange = 5
+	// 	toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+	// 	eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+	// 	eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+	// 	toggleAction = True
+	// 	defaultActionGroup = Lights
+	// 	redCurve
+	// 	{
+	// 		key = 0 0 0 3
+	// 		key = 1 1 0 0
+	// 	}
+	// 	greenCurve
+	// 	{
+	// 		key = 0 0 0 1
+	// 		key = 1 1 1 0
+	// 	}
+	// 	blueCurve
+	// 	{
+	// 		key = 0 0 0 0
+	// 		key = 1 0.7 1.5 0
+	// 	}
+	// 	alphaCurve
+	// 	{
+	// 		key = 0 1
+	// 	}
+	// }
 
 }
