--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
@@ -145,6 +145,51 @@ PART
 		nodeEnabled = True
 		attachNodeName = bottom
 	}
+
+	MODULE
+	{
+		name = ModulePartVariants
+		useMultipleDragCubes = false
+		baseVariant = Rusty
+		VARIANT
+		{
+			name = Rusty
+			displayName = #RSR-v-rust-name
+			description = #RSR-v-rust-desc
+			primaryColor = #7d6523
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName = heatshield
+				mainTextureURL = RustyStar/RustyStarRockets/Assets/Thermal/hs
+			}
+			TEXTURE
+			{
+				materialName = Fairing
+				mainTextureURL = RustyStar/RustyStarRockets/Assets/Thermal/HSFairing
+			}
+			
+		}
+		
+		VARIANT
+		{
+			name = Stock
+			displayName= #RSR-v-stock-name
+			description = #RSR-v-stock-desc
+			primaryColor = #303030
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName = heatshield
+				mainTextureURL = Squad/Parts/Aero/HeatShield/heatshield
+			}
+			TEXTURE
+			{
+				materialName = Fairing
+				mainTextureURL = Squad/Parts/Aero/HeatShield/Fairing
+			}
+		}
+	}
 	
 	RESOURCE
 	{
