--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-inflatable-250.cfg
@@ -108,6 +108,51 @@ PART
 		hideJettisonMenu = True
 		useMultipleDragCubes = False
 	}
+
+	MODULE
+	{
+		name = ModulePartVariants
+		useMultipleDragCubes = false
+		baseVariant = Rusty
+		VARIANT
+		{
+			name = Rusty
+			displayName = #RSR-v-rust-name
+			description = #RSR-v-rust-desc
+			primaryColor = #7d6523
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName = HeatShield
+				mainTextureURL = RustyStar/RustyStarRockets/Assets/Thermal/HeatShield
+			}
+			TEXTURE
+			{
+				materialName = HeatShieldFairing
+				mainTextureURL = RustyStar/RustyStarRockets/Assets/Thermal/HeatShieldFairing
+			}
+		}
+		
+		VARIANT
+		{
+			name = Stock
+			displayName= #RSR-v-stock-name
+			description = #RSR-v-stock-desc
+			primaryColor = #303030
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName = HeatShield
+				mainTextureURL = Squad/Parts/Aero/InflatableHeatShield/HeatShield
+			}
+			TEXTURE
+			{
+				materialName = HeatShieldFairing
+				mainTextureURL = Squad/Parts/Aero/InflatableHeatShield/HeatShieldFairing
+			}
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
