--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb-sm.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb-sm.cfg
@@ -45,62 +45,73 @@ PART
 	{
 		name = ModuleLight
 		lightName = nit
+		useAnimationDim = true
+		lightBrightenSpeed = 2.5
+		lightDimSpeed = 0.5
+		resourceAmount = 0.005
 		animationName = bukb1
-			useAnimationDim = True
-			lightBrightenSpeed = 2.5
-			lightDimSpeed = 0.5
-		useResources = True
-			resourceName = ElectricCharge
-			resourceAmount = 0.003
-		castLight = True
-			disableColorPicker = false
-			lightR = 0.0
-			lightG = 1.0
-			lightB = 0.0
-		canBlink = True
-			blinkMin = 0.2
-			blinkMax = 2.0
-			blinkRate = 0.5
-			isBlinking = True
-		defaultActionGroup  = Lights
+		useResources = true
 	}
+	// MODULE
+	// {
+	// 	name = ModuleLight
+	// 	lightName = nit
+	// 	animationName = bukb1
+	// 		useAnimationDim = True
+	// 		lightBrightenSpeed = 2.5
+	// 		lightDimSpeed = 0.5
+	// 	useResources = True
+	// 		resourceName = ElectricCharge
+	// 		resourceAmount = 0.003
+	// 	castLight = True
+	// 		disableColorPicker = false
+	// 		lightR = 0.0
+	// 		lightG = 1.0
+	// 		lightB = 0.0
+	// 	canBlink = True
+	// 		blinkMin = 0.2
+	// 		blinkMax = 2.0
+	// 		blinkRate = 0.5
+	// 		isBlinking = True
+	// 	defaultActionGroup  = Lights
+	// }
 
-	MODULE
-	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = False
-		useRate = True
-		toggleInEditor = True
-		toggleInFlight = True
-		toggleInFlight = True
-		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
-		toggleAction = True
-		defaultActionGroup = Light
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
-	}
+	// MODULE
+	// {
+	// 	name = ModuleColorChanger
+	// 	shaderProperty = _EmissiveColor
+	// 	animRate = 0.8
+	// 	animState = False
+	// 	useRate = True
+	// 	toggleInEditor = True
+	// 	toggleInFlight = True
+	// 	toggleInFlight = True
+	// 	unfocusedRange = 5
+	// 	toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+	// 	eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+	// 	eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+	// 	toggleAction = True
+	// 	defaultActionGroup = Light
+	// 	redCurve
+	// 	{
+	// 		key = 0 0 0 3
+	// 		key = 1 1 0 0
+	// 	}
+	// 	greenCurve
+	// 	{
+	// 		key = 0 0 0 1
+	// 		key = 1 1 1 0
+	// 	}
+	// 	blueCurve
+	// 	{
+	// 		key = 0 0 0 0
+	// 		key = 1 0.7 1.5 0
+	// 	}
+	// 	alphaCurve
+	// 	{
+	// 		key = 0 1
+	// 	}
+	// }
 	
 
 }
