--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-e.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-e.cfg
@@ -41,61 +41,61 @@ PART
 
 	maxTemp = 2000
 
-	// MODULE
-	// {
-	// 	name = ModuleAnimateGeneric
-	// 	animationName = EmmAnim
-	// 	startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
-	// 	endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
-	// 	actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
-	// 	eventAvailableEditor = True
-	// 	eventAvailableFlight = True
-	// 	eventAvailableEVA = True
-	// 	evaDistance = 10
-	// 	allowDeployLimit = True
-	// 	revClampDirection = False
-	// 	revClampSpeed = True
-	// 	revClampPercent = True
-	// 	isOneShot = False
-	// 	defaultActionGroup  = Lights
-	// }
-
 	MODULE
 	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = False
-		useRate = True
-		toggleInEditor = True
-		toggleInFlight = True
-		toggleInFlight = True
-		unfocusedRange = 5
+		name = ModuleAnimateGeneric
+		animationName = EmmAnim
 		startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
 		endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
 		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
-		toggleAction = True
-		defaultActionGroup = Lights
-		disableColorPicker = false
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+		isOneShot = False
+		defaultActionGroup  = Lights
 	}
+
+	// MODULE
+	// {
+	// 	name = ModuleColorChanger
+	// 	shaderProperty = _EmissiveColor
+	// 	animRate = 0.8
+	// 	animState = False
+	// 	useRate = True
+	// 	toggleInEditor = True
+	// 	toggleInFlight = True
+	// 	toggleInFlight = True
+	// 	unfocusedRange = 5
+	// 	startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
+	// 	endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
+	// 	actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
+	// 	toggleAction = True
+	// 	defaultActionGroup = Lights
+	// 	// disableColorPicker = false
+	// 	redCurve
+	// 	{
+	// 		key = 0 0 0 3
+	// 		key = 1 1 0 0
+	// 	}
+	// 	greenCurve
+	// 	{
+	// 		key = 0 0 0 1
+	// 		key = 1 1 1 0
+	// 	}
+	// 	blueCurve
+	// 	{
+	// 		key = 0 0 0 0
+	// 		key = 1 0.7 1.5 0
+	// 	}
+	// 	alphaCurve
+	// 	{
+	// 		key = 0 1
+	// 	}
+	// }
 
 }
