--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
@@ -41,65 +41,66 @@ PART
 
 	maxTemp = 2000	
 
-	// MODULE
-	// {
-	// 	name = ModuleLight
-	// 	lightName = nit
-	// 	animationName = laserAnimation
-	// 		useAnimationDim = True
-	// 		lightBrightenSpeed = 9
-	// 		lightDimSpeed = 8
-	// 	useResources = True
-	// 		resourceName = ElectricCharge
-	// 		resourceAmount = 0.01
-	// 	castLight = True
-	// 		disableColorPicker = false
-	// 		lightR = 0.0
-	// 		lightG = 1.0
-	// 		lightB = 0.0
-	// 	canBlink = True
-	// 		blinkMin = 0.2
-	// 		blinkMax = 2.0
-	// 		blinkRate = 0.5
-	// 		isBlinking = True
-	// 	defaultActionGroup  = Lights
-	// }
-	
 	MODULE
 	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = False
-		useRate = True
-		toggleInEditor = True
-		toggleInFlight = True
-		toggleInFlight = True
-		unfocusedRange = 5
-		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
-		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
-		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
-		toggleAction = True
-		defaultActionGroup = Lights
-		disableColorPicker = false
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
+		name = ModuleLight
+		lightName = nit
+		animationName = laserAnimation
+			useAnimationDim = True
+			lightBrightenSpeed = 9
+			lightDimSpeed = 8
+		useResources = True
+			resourceName = ElectricCharge
+			resourceAmount = 0.01
+		castLight = True
+			disableColorPicker = false
+			lightR = 0.0
+			lightG = 1.0
+			lightB = 0.0
+		canBlink = True
+			blinkMin = 0.2
+			blinkMax = 2.0
+			blinkRate = 0.5
+			isBlinking = True
+		defaultActionGroup  = Lights
 	}
+	
+	// MODULE
+	// {
+	// 	name = ModuleColorChanger
+	// 	shaderProperty = _EmissiveColor
+	// 	animRate = 0.8
+	// 	animState = False
+	// 	useRate = True
+	// 	toggleInEditor = True
+	// 	toggleInFlight = True
+	// 	toggleInFlight = True
+	// 	unfocusedRange = 5
+	// 	toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+	// 	eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+	// 	eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+	// 	toggleAction = True
+	// 	defaultActionGroup = Lights
+	// 	disableColorPicker = false
+	// 	redCurve
+	// 	{
+	// 		key = 0 0 0 3
+	// 		key = 1 1 0 0
+	// 	}
+	// 	greenCurve
+	// 	{
+	// 		key = 0 0 0 1
+	// 		key = 1 1 1 0
+	// 	}
+	// 	blueCurve
+	// 	{
+	// 		key = 0 0 0 0
+	// 		key = 1 0.7 1.5 0
+	// 	}
+	// 	alphaCurve
+	// 	{
+	// 		key = 0 1
+	// 	}
+	// }
+
 }
