--- a/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Thermal/rsr-heatshield-375.cfg
@@ -38,9 +38,9 @@ PART
 	category = Thermal
 	subcategory = 0
 
-	title = #RSR-heatshield-375-titl
+	title = #autoLOC_500187 // Heat Shield (3.75m)
 	manufacturer = #RSS-Agency-titl
-	description = #RSR-heatshield-375-desc
+	description = #autoLOC_500188 // A large structural heat shield with an integrated fairing
 	tags = #autoLOC_500189 // ablat drag entry insulate protect re- rocket therm
 
 	mass = 1.0
