--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb-sm.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-bulb-sm.cfg
@@ -41,40 +41,40 @@ PART
 
 	maxTemp = 2000
 
-	MODULE
-	{
-		name = ModuleLight
-		lightName = nit
-		useAnimationDim = true
-		lightBrightenSpeed = 2.5
-		lightDimSpeed = 0.5
-		resourceAmount = 0.005
-		animationName = bukb1
-		useResources = true
-	}
 	// MODULE
 	// {
 	// 	name = ModuleLight
 	// 	lightName = nit
+	// 	useAnimationDim = true
+	// 	lightBrightenSpeed = 2.5
+	// 	lightDimSpeed = 0.5
+	// 	resourceAmount = 0.005
 	// 	animationName = bukb1
-	// 		useAnimationDim = True
-	// 		lightBrightenSpeed = 2.5
-	// 		lightDimSpeed = 0.5
-	// 	useResources = True
-	// 		resourceName = ElectricCharge
-	// 		resourceAmount = 0.003
-	// 	castLight = True
-	// 		disableColorPicker = false
-	// 		lightR = 0.0
-	// 		lightG = 1.0
-	// 		lightB = 0.0
-	// 	canBlink = True
-	// 		blinkMin = 0.2
-	// 		blinkMax = 2.0
-	// 		blinkRate = 0.5
-	// 		isBlinking = True
-	// 	defaultActionGroup  = Lights
+	// 	useResources = true
 	// }
+	MODULE
+	{
+		name = ModuleLight
+		lightName = nit
+		animationName = bukb1
+			useAnimationDim = True
+			lightBrightenSpeed = 2.5
+			lightDimSpeed = 0.5
+		useResources = True
+			resourceName = ElectricCharge
+			resourceAmount = 0.003
+		castLight = True
+			disableColorPicker = false
+			lightR = 0.0
+			lightG = 1.0
+			lightB = 0.0
+		canBlink = True
+			blinkMin = 0.2
+			blinkMax = 2.0
+			blinkRate = 0.5
+			isBlinking = True
+		defaultActionGroup  = Lights
+	}
 
 	// MODULE
 	// {
