--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
@@ -53,7 +53,7 @@ PART
 			resourceName = ElectricCharge
 			resourceAmount = 0.01
 		castLight = True
-			disableColorPicker = false
+			disableColorPicker = true
 			lightR = 0.0
 			lightG = 1.0
 			lightB = 0.0
