--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
@@ -57,7 +57,7 @@ PART
 			lightR = 0.0
 			lightG = 1.0
 			lightB = 0.0
-		canBlink = True
+		canBlink = False
 			blinkMin = 0.2
 			blinkMax = 2.0
 			blinkRate = 0.5
