--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-e-tri.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-e-tri.cfg
@@ -45,9 +45,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = EmmAnim
-		startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
-		endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
-		actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
+		startEventGUIName = #RSS-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSS-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSS-MAG-light-belt-actn // Toggle unnecessary lights
 		eventAvailableEditor = True
 		eventAvailableFlight = True
 		eventAvailableEVA = True
@@ -71,9 +71,9 @@ PART
 	// 	toggleInFlight = True
 	// 	toggleInFlight = True
 	// 	unfocusedRange = 5
-	// 	startEventGUIName = #RSR-MAG-light-belt-strt // Let there be light
-	// 	endEventGUIName = #RSR-MAG-light-belt-stop // Let there be dark
-	// 	actionGUIName = #RSR-MAG-light-belt-actn // Toggle unnecessary lights
+	// 	startEventGUIName = #RSS-MAG-light-belt-strt // Let there be light
+	// 	endEventGUIName = #RSS-MAG-light-belt-stop // Let there be dark
+	// 	actionGUIName = #RSS-MAG-light-belt-actn // Toggle unnecessary lights
 	// 	toggleAction = True
 	// 	defaultActionGroup = Lights
 	// 	// disableColorPicker = false
