--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
@@ -39,7 +39,31 @@ PART
 
 	crashTolerance = 8
 
-	maxTemp = 2000	
+	maxTemp = 2000
+
+	MODULE
+	{
+		name = ModuleLight
+		lightName = light
+		animationName = laserAnimation
+			useAnimationDim = True
+			lightBrightenSpeed = 9
+			lightDimSpeed = 8
+		useResources = True
+			resourceName = ElectricCharge
+			resourceAmount = 0.01
+		castLight = True
+			disableColorPicker = true
+			lightR = 0.0
+			lightG = 1.0
+			lightB = 0.0
+		canBlink = False
+			blinkMin = 0.2
+			blinkMax = 2.0
+			blinkRate = 0.5
+			isBlinking = True
+		defaultActionGroup  = Lights
+	}
 
 	MODULE
 	{
