--- a/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Lights/rsr-light-landing-laser.cfg
@@ -43,51 +43,46 @@ PART
 
 	MODULE
 	{
-		name = ModuleLight
-		lightName = light
+		name = ModuleAnimateGeneric
 		animationName = laserAnimation
-			useAnimationDim = True
-			lightBrightenSpeed = 9
-			lightDimSpeed = 8
-		useResources = True
-			resourceName = ElectricCharge
-			resourceAmount = 0.01
-		castLight = True
-			disableColorPicker = true
-			lightR = 0.0
-			lightG = 1.0
-			lightB = 0.0
-		canBlink = False
-			blinkMin = 0.2
-			blinkMax = 2.0
-			blinkRate = 0.5
-			isBlinking = True
+		startEventGUIName = #RSS-MAG-light-belt-strt // Let there be light
+		endEventGUIName = #RSS-MAG-light-belt-stop // Let there be dark
+		actionGUIName = #RSS-MAG-light-belt-actn // Toggle unnecessary lights
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+		isOneShot = False
 		defaultActionGroup  = Lights
 	}
 
-	MODULE
-	{
-		name = ModuleLight
-		lightName = nit
-		animationName = laserAnimation
-			useAnimationDim = True
-			lightBrightenSpeed = 9
-			lightDimSpeed = 8
-		useResources = True
-			resourceName = ElectricCharge
-			resourceAmount = 0.01
-		castLight = True
-			disableColorPicker = true
-			lightR = 0.0
-			lightG = 1.0
-			lightB = 0.0
-		canBlink = False
-			blinkMin = 0.2
-			blinkMax = 2.0
-			blinkRate = 0.5
-			isBlinking = True
-		defaultActionGroup  = Lights
-	}
+	// MODULE
+	// {
+	// 	name = ModuleLight
+	// 	lightName = nit
+	// 	animationName = laserAnimation
+	// 		useAnimationDim = True
+	// 		lightBrightenSpeed = 9
+	// 		lightDimSpeed = 8
+	// 	useResources = True
+	// 		resourceName = ElectricCharge
+	// 		resourceAmount = 0.01
+	// 	castLight = True
+	// 		disableColorPicker = true
+	// 		lightR = 0.0
+	// 		lightG = 1.0
+	// 		lightB = 0.0
+	// 	canBlink = False
+	// 		blinkMin = 0.2
+	// 		blinkMax = 2.0
+	// 		blinkRate = 0.5
+	// 		isBlinking = True
+	// 	defaultActionGroup  = Lights
+	// }
 	
 	// MODULE
 	// {
