--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -1,12 +1,17 @@
-// en-us.cfg v1.0.3.0
+// en-us.cfg v1.0.4.0
 // Rusty Star Rockets (RSR)
 // created: 21 Aug 2022
-// updated: 15 Jan 2023
+// updated: 07 Jul 2023
+//
+// TEMPLATE:
+// en-us.cfg v1.1.1.0
+// created: 01 Jan 2016
+// updated: 01 Jun 2023
 
 // this file:
-//   CC BY-SA 4.0 by zer0Kerbal
-//   created by zer0Kerbal
-//   translated courtesty of [zer0Kerbal](https://github.com/zer0Kerbal)
+//   CC BY-SA 4.0 by GagaX and zer0Kerbal
+//   created by: [zer0Kerbal](https://github.com/zer0Kerbal)
+//   translated: [zer0Kerbal](https://github.com/zer0Kerbal)
 
 Localization
 {
