--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/Longsword/rsr-eng-250-longsword.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/Longsword/rsr-eng-250-longsword.cfg
@@ -11,13 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	mesh = NewModel.mu
-
-	MODEL
-	{
-		model = RustyStar/RustyStarRockets/Assets/Engine/Longsword/rsr-eng-250-longsword
-		texture = Airbrake, Aero/Airbrake
-	}
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/Longsword/rsr-eng-250-longsword }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
