--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-longsword.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-longsword.cfg
@@ -320,6 +320,7 @@ PART
 	MODULE
 	{
 		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
 		RESOURCE
 		{
 			name = ElectricCharge
