--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/EngineGecko.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/EngineGecko.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-0625-ion.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,32 +6,42 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-0625-ion
 	oldName = EngineGecko
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	mesh = model.mu
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/EngineGecko/eng-gecko }
 	scale = 1.0
 	rescaleFactor = 1.0
+	bulkheadProfiles = size0
+
+	attachRules = 1,0,1,1,0
 	node_stack_top = 0.0, 0.23276, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.23276, 0.0, 0.0, -1.0, 0.0, 1
+
 	TechRequired = ionPropulsion
 	entryCost = 16800
 	cost = 8000
 	category = Engine
 	subcategory = 0
+
 	title = Radon Ion Propulsion Engine "Gecko"
 	manufacturer = #RSS-Agency-titl
 	description = .
-	attachRules = 1,0,1,1,0
+
 	mass = 0.4
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
-	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size0
+
+	maxTemp = 2000
 	MODULE
 	{
 		name = ModuleEnginesFX
