--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-0625-ion.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-0625-ion.cfg
@@ -1,4 +1,4 @@
-// rsr-eng-0625-ion.cfg v1.8.99.4
+// rsr-eng-ion-0625.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-0625-ion
+	name = rsr-eng-ion-0625
 	oldName = EngineGecko
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -31,6 +31,7 @@ PART
 	title = Radon Ion Propulsion Engine "Gecko"
 	manufacturer = #RSS-Agency-titl
 	description = .
+	tags = #autoLOC_500405 // (dawn deep drive efficient engine (ion probe thruster vacuum xenon
 
 	mass = 0.4
 
@@ -42,6 +43,35 @@ PART
 	crashTolerance = 7
 
 	maxTemp = 2000
+
+	EFFECTS
+	{		
+		IonPlume
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = RustyStarRockets/Sounds/sound_gecko
+				volume = 0.0 0.0
+				volume = 0.1 0.20
+				volume = 1.0 0.4
+				pitch = 0.0 0.2
+				pitch = 1.0 0.8
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = RustyStarRockets/FX/geckoEFF
+				transformName = thrust
+				emission = 0.0 0.0
+				emission = 0.1 0.3			
+				emission = 1.0 1.0
+				//speed = 0.0 0.0
+				//speed = 1.0 1.0
+			}
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -71,6 +101,7 @@ PART
 			key = 1.2 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
@@ -80,33 +111,7 @@ PART
 		engineName = Ion
 		dependOnThrottle = True
 	}
-	EFFECTS
-	{		
-		IonPlume
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = RustyStarRockets/Sounds/sound_gecko
-				volume = 0.0 0.0
-				volume = 0.1 0.20
-				volume = 1.0 0.4
-				pitch = 0.0 0.2
-				pitch = 1.0 0.8
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = RustyStarRockets/FX/geckoEFF
-				transformName = thrust
-				emission = 0.0 0.0
-				emission = 0.1 0.3			
-				emission = 1.0 1.0
-				//speed = 0.0 0.0
-				//speed = 1.0 1.0
-			}
-		}
-	}
+
 	MODULE
 	{
 		name = ModuleTestSubject
@@ -190,4 +195,5 @@ PART
 			body = _NotSun
 		}
 	}
+
 }
