--- a/GameData/RustyStar/RustyStarRockets/Config/RadonGas.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/RadonGas.cfg
@@ -15,7 +15,7 @@
 	}
 }
 
-@PART[,rsr-tank-radon-0625,rsr-tank-radon-125]:FOR[RustyStarRockets]
+@PART[rsr-tank-radon-0625,rsr-tank-radon-125]:FOR[RustyStarRockets]
 {
 	@RESOURCE[XenonGas]
 	{
@@ -23,7 +23,7 @@
 	}
 }
 
-@PART[rsr-eng-0625-ion]:FOR[RustyStarRockets]
+@PART[rsr-eng-ion-0625]:FOR[RustyStarRockets]
 {
 	@MODULE[ModuleEnginesFx]
 	{
