--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-nuc-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-nuc-aa.cfg
@@ -1,4 +1,4 @@
-// rsr-eng-125-nuc-aa.cfg v1.8.99.4
+// rsr-eng-nuc-125-aa.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-125-nuc-aa
+	name = rsr-eng-nuc-125-aa
 	oldName = aaEngine
 	module = Part
 	author = GagaX and zer0Kerbal
