--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RadonEngine1/RadonEngine1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RadonEngine1/RadonEngine1.cfg
@@ -6,37 +6,49 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-ion-iguana
 	oldName = RadonEngine1
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	mesh = model.mu
-        scale = 1.0
+
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/eng-gecko }
+	scale = 1.0
 	rescaleFactor = 1.0
+	bulkheadProfiles = srf
+
+	attachRules = 1,0,1,1,0
 	node_stack_top = 0.0, 0.5, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.5, 0.0, 0.0, -1.0, 0.0, 1
+
 	TechRequired = ionPropulsion
 	entryCost = 19800
 	cost = 9000
 	category = Engine
 	subcategory = 0
+
 	title = RSR "Iguana" Radon Electric Propulsion System
 	manufacturer = #RSS-Agency-titl
 	description = .
-	attachRules = 1,0,1,1,0
+	tags = #autoLOC_500405 // (dawn deep drive efficient engine (ion probe thruster vacuum xenon
+
 	mass = 0.99
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 7
 	breakingForce = 200
 	breakingTorque = 200
+
 	maxTemp = 2000 // = 3600
-	bulkheadProfiles = srf
+	// heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.8 // engine nozzles are good at radiating.
+
 	EFFECTS
 	{
 		running_closed
@@ -53,7 +65,7 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-modelName = RustyStarRockets/FX/iguanaEFF
+				modelName = RustyStarRockets/FX/iguanaEFF
 				transformName = thrustTransform
 				emission = 0.0 0.0
 				emission = 0.4 0.0
@@ -84,12 +96,13 @@ modelName = RustyStarRockets/FX/iguanaEFF
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
-runningEffectName = running_closed
+		runningEffectName = running_closed
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 33
@@ -112,19 +125,29 @@ runningEffectName = running_closed
 			key = 1.2 0.001
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 2
+		gimbalResponseSpeed = 50
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
 	}
-	
+
 MODULE
 {
-      name = FXModuleAnimateThrottle
-      animationName = radonengine
-      dependOnEngineState = True
-      responseSpeed = 0.5
+	  name = FXModuleAnimateThrottle
+	  animationName = radonengine
+	  dependOnEngineState = True
+	  responseSpeed = 0.5
 }
 MODULE
 	{
