--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-ion-iguana.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -13,7 +13,7 @@ PART
 
 	mesh = model.mu
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/eng-gecko }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/Iguana/eng-ignuana }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = srf
