--- a/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Localization/en-us.cfg
@@ -22,6 +22,13 @@ Localization
 		#RSR-ABBV = RSR
 		#RSR-tags = rsr rust star
 
+	// Addon specific tags
+		#RSR-gecko = )gecko
+		#RSR-iguana = )iguana
+		#RSR-atomicant = )atomic )ant
+		#RSR- = )
+		#RSR- = )
+
 // 0.8.99.3
 	// Parts\Aero
 		#RSR-airbrake-titl = R.S.R.A.I.R.B.R.A.K.E.S
