--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625.cfg
@@ -30,8 +30,8 @@ PART
 
 	title = Radon Ion Propulsion Engine "Gecko"
 	manufacturer = #RSS-Agency-titl
-	description = .
-	tags = #autoLOC_500405 // (dawn deep drive efficient engine (ion probe thruster vacuum xenon
+	description = Gecko Ion Drive. Id nisi non in excepteur cillum dolor magna nisi laboris qui Lorem.
+	tags = #RSS-ion-tags
 
 	mass = 0.4
 
