--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-iguana.cfg
@@ -16,7 +16,7 @@ PART
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/Iguana/eng-ignuana }
 	scale = 1.0
 	rescaleFactor = 1.0
-	bulkheadProfiles = srf
+	bulkheadProfiles = srf, size1
 
 	attachRules = 1,0,1,1,0
 	node_stack_top = 0.0, 0.5, 0.0, 0.0, 1.0, 0.0, 1
@@ -30,8 +30,8 @@ PART
 
 	title = RSR "Iguana" Radon Electric Propulsion System
 	manufacturer = #RSS-Agency-titl
-	description = .
-	tags = #autoLOC_500405 // (dawn deep drive efficient engine (ion probe thruster vacuum xenon
+	description = Iguana Electric Propulsion. Velit non nulla est officia nostrud.
+	tags = #RSS-ion-tags
 
 	mass = 0.99
 
