--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-125-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-125-aa.cfg
@@ -30,6 +30,7 @@ PART
 	title = RSR "Atomic Ant" Atomic Rocket Motor
 	manufacturer = #RSS-Agency-titl
 	description = Culpa duis et elit consequat ullamco amet duis excepteur veniam.
+	tags = #RSS-nuc-tags
 
 	mass = 3
 
