--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/BigRadialEngineLandingLegs/BigRadialEngineLandingLegs.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/BigRadialEngineLandingLegs/BigRadialEngineLandingLegs.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-nuc-leg.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,34 +6,42 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-nuc-leg
 	oldName = BigRadialEngineLandingLegs
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	mesh = model.mu
 	scale = 1.0
-        rescaleFactor = 0.7
+	rescaleFactor = 0.7
+	bulkheadProfiles = srf
+
+	attachRules = 0,1,0,0,1
 	node_attach = -0.2, 0.0, 0.0, 1.0, 0.0, 0.0, 1
+
 	TechRequired = advRocketry
 	entryCost = 44200
 	cost = 9000
 	category = Ground
 	subcategory = 0
+
 	title = Atomic Landing Engine
 	manufacturer = #RSS-Agency-titl
-	description = .
+	description = Multi Mode Engine: Normal and OVERDRIVE. Do dolor proident consectetur.
 
-attachRules = 0,1,0,0,1
 	mass = 2.65
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 66
 	breakingForce = 50
 	breakingTorque = 50
-	maxTemp = 5000 // = 2900
-	bulkheadProfiles = srf
+
+	maxTemp = 5000
+
 	EFFECTS
 	{
 		running_closed
@@ -48,7 +56,7 @@ attachRules = 0,1,0,0,1
 				pitch = 1.0 1.0
 				loop = true
 			}
-			
+
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = RustyStarRockets/FX/E1_EFF
@@ -59,7 +67,7 @@ attachRules = 0,1,0,0,1
 				emission = 1.0 1.25
 				speed = 0.0 0.5
 				speed = 1.0 1.2
-localOffset = 0, 0, 1
+				localOffset = 0, 0, 1
 			}
 		}
 		power_open
@@ -75,7 +83,7 @@ localOffset = 0, 0, 1
 				pitch = 1.0 1.0
 				loop = true
 			}
-MODEL_MULTI_PARTICLE
+			MODEL_MULTI_PARTICLE
 			{
 				modelName = RustyStarRockets/FX/E1VacuumEFF
 				transformName = thrustTransform
@@ -85,9 +93,8 @@ MODEL_MULTI_PARTICLE
 				emission = 1.0 1.25
 				speed = 0.0 0.5
 				speed = 1.0 1.2
-localOffset = 0, 0, 1
+				localOffset = 0, 0, 1
 			}
-			
 		}
 		running_open
 		{
@@ -102,7 +109,7 @@ localOffset = 0, 0, 1
 				pitch = 1.0 1.4
 				loop = true
 			}
-			
+
 		}
 		engage
 		{
@@ -133,16 +140,18 @@ localOffset = 0, 0, 1
 			}
 		}
 	}
+
 	MODULE
 	{
 		name = MultiModeEngine
 		primaryEngineID = Normal
 		secondaryEngineID = OVERDRIVE
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
-                engineID = Normal
+		engineID = Normal
 		powerEffectName = power_open
 		//runningEffectName = running_open
 		thrustVectorTransformName = thrustTransform
@@ -159,19 +168,19 @@ localOffset = 0, 0, 1
 			ratio = 1
 			DrawGauge = True
 		}
-		
+
 		atmosphereCurve
 		{
 			key = 0 1050
 			key = 1 180
 			key = 2 0.001
 		}
-		
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
-                engineID = OVERDRIVE
+		engineID = OVERDRIVE
 		runningEffectName = running_closed
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
@@ -187,7 +196,7 @@ localOffset = 0, 0, 1
 			ratio = 1
 			DrawGauge = True
 		}
-		
+
 		atmosphereCurve
 		{
 			key = 0 215
@@ -195,32 +204,38 @@ localOffset = 0, 0, 1
 			key = 2 360.0
 		}
 	}
-MODULE
-{
-name = ModuleAnimateGeneric
-animationName = EAR1
-startEventGUIName = Deploy
-endEventGUIName = Retract
-}
-MODULE
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = EAR1
+		startEventGUIName = #RSS-leg-on // Leg: Deploy
+		endEventGUIName = #RSS-leg-off // Leg: Retract
+		actionGUIName = #RSS-leg-togl // Toggle Leg
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+	}
+
+	MODULE
 	{
 		name = ModuleAnimateHeat
 		ThermalAnim = thrust
-		
+
 	}
-MODULE
+
+	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 3
 	}
-	MODULE
-	{
-		name = ModuleTestSubject
-		environments = 15
-		useStaging = True
-		useEvent = True
-	}
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -230,6 +245,7 @@ MODULE
 		falloff = 2
 		thrustTransformName = thrustTransform
 	}
+
 	MODULE
 	{
 		name = ModuleSurfaceFX
@@ -239,13 +255,24 @@ MODULE
 		falloff = 1.6
 		thrustTransformName = thrustTransform
 	}
-MODULE
+
+	MODULE
 	{
 		name = ModuleAlternator
+		outputName = #autoLoc_6003026 // Alternator
 		RESOURCE
 		{
 			name = ElectricCharge
 			rate = 6.0
 		}
 	}
+
+	MODULE
+	{
+		name = ModuleTestSubject
+		environments = 15
+		useStaging = True
+		useEvent = True
+	}
+
 }
