--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSR_atom2/RSR_atom2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/RSR_atom2/RSR_atom2.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-nuc-250-aa.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,35 +6,40 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-
+	name = rsr-eng-nuc-250-aa
 	oldName = RSR_atom2
 	module = Part
 	author = GagaX and zer0Kerbal
+
 	mesh = a2.mu
 	scale = 1.0
 	rescaleFactor = 1.0
+	bulkheadProfiles = size2
+
+	attachRules = 1,0,1,0,0
 	node_stack_top = 0.0, 1.07223, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0, -2.16974, 0.0, 0.0, -1.0, 0.0
+
 	TechRequired = veryHeavyRocketry
 	entryCost = 45000
 	cost = 31099
 	category = Engine
 	subcategory = 0
+
 	title = RSR "Atomic Atom" Atomic Rocket Motor
 	manufacturer = #RSS-Agency-titl
 	description = Advanced characteristics of this engine are made possible by use of Rustonium.
-	attachRules = 1,0,1,0,0
+
 	mass = 5.5
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.85 // engine nozzles are good at radiating, NTRs even better
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
 	crashTolerance = 12
 	maxTemp = 2500 // = 4000
-	bulkheadProfiles = size2
+	// heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.85 // engine nozzles are good at radiating, NTRs even better
 	radiatorMax = 0.35 //Default = 0.25 but nuke engines are meant to run hot
 	EFFECTS
 	{
