--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
@@ -11,7 +11,8 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	mesh = a2.mu
+	// mesh = a2.mu
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/RSR_atom2/atomicant-250 }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2
