--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -5,7 +5,7 @@
 
 // THIS FILE: CC BY-SA 4.0 by [zer0Kerbal][https://github.com/zer0Kerbal]
 
-@PART[rsr-eng-250-longsword,rsr-eng-ion-iguana]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+@PART[rsr-eng-nuc-250-aa,rsr-eng-250-longsword,rsr-eng-ion-iguana,rsr-engine-alien]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
 {
 	MODULE
 	{
@@ -24,3 +24,28 @@
 		limitToGimbalRange = False
 	}
 }
+
+// \engineS3.cfg:
+// \rsr-eng-250-longsword.cfg:
+// \rsr-eng-ion-iguana.cfg:
+// \rsr-eng-nuc-250-aa.cfg:
+// BigRadialEngineLandingLegs.cfg:
+// \liquidEngineRadial\liquidEngineRadial.cfg:
+//   		gimbalTransformName = obj_gimbal
+
+// \RSR_VTOL_EnginesB\VTOL2L.cfg:
+// \RSR_VTOL_EnginesB\VTOL2R.cfg:
+// \RSRBasicJet\RSRBasicJet.cfg:
+// \RSRturboJet\RSRturboJet.cfg:
+//   118  		gimbalTransformName = Gimbal
+
+// \RustyEngineFalchion.cfg:
+//   268  		gimbalTransformName = obj_gimbal
+
+// \RustyLiquidEngine.cfg:
+//   137  		gimbalTransformName = GIMBAL
+
+// \RustyLiquidEngineLarge.cfg:
+// \RSR_S2_V.cfg:
+// \RustyLiquidEngineVacuum.cfg:
+//   130  		gimbalTransformName = GIMBAL
