--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
@@ -1,7 +1,7 @@
-// ghostParts.cfg v1.8.99.3
+// ghostParts.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 
-// updated: 05 Mar 2023
+// updated: 08 Jul 2023
 //
 // TEMPLATE: ghostParts.md v2.0.2.0
 // created: 17 Aug 2017
@@ -10,17 +10,19 @@
 // THIS FILE: CC BY-ND 4.0 by zer0Kerbal
 
 // creates duplicate part to prevent save game issues because of a part name change
-+PART[rsr-*]:HAS[#oldName[*]]:NEEDS[MOD-NAME]:LAST[MOD-NAME]
-{
-	@name = #$oldName$
-	!TechRequired = DELETE
-	!entryCost = DELETE
-	@category = -1
-	%TechHidden = True
-	%entryCost = 0
-	@title ^= :^:Kindly use new part numbers :
-	!manufacturer = DELETE
-	@description = This part has been depreciated, kindly use new part.
-	!tags = DELETE
-	!oldName = DELETE
-}
+// +PART[rsr-*]:HAS[#oldName[*]]:NEEDS[Rusty Star Rockets]:LAST[Rusty Star Rockets]
+// {
+// 	@name = #$oldName$
+// 	!TechRequired = DELETE
+// 	!entryCost = DELETE
+// 	@category = -1
+// 	%TechHidden = True
+// 	%entryCost = 0
+// 	@title ^= :^:Kindly use new part numbers :
+// 	!manufacturer = DELETE
+// 	@description = This part has been depreciated, kindly use new part.
+// 	!tags = DELETE
+// }
+
+@PART[rsr-*]:HAS[#oldName[*]]:NEEDS[Rusty Star Rockets]:AFTER[Rusty Star Rockets]
+{ !oldName = DELETE }
