--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/BigRadialEngineLandingLegs/BigRadialEngineLandingLegs.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/BigRadialEngineLandingLegs/BigRadialEngineLandingLegs.cfg
@@ -1,4 +1,4 @@
-// rsr-eng-nuc-leg.cfg v1.8.99.4
+// rsr-eng-nuc-leg-250.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,7 +6,7 @@
 // this file: CC BY-ND 4.0 by zer0Kerbal
 PART
 {
-	name = rsr-eng-nuc-leg
+	name = rsr-eng-nuc-leg-250
 	oldName = BigRadialEngineLandingLegs
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -275,4 +275,17 @@ PART
 		useEvent = True
 	}
 
+	// Dimensions: x: 2.38, y: 4.20, z: 2.30
+	// Bounding Box Size: 23023.63 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 23500
+	}
+
+	DRAG_CUBE
+	{
+		cube = A, 10.63,0.9637,5.16, 10.63,0.8131,5.249, 4.835,0.6617,7.289, 4.835,0.8936,7.318, 8.105,0.8826,1.246, 8.105,0.8823,1.992, -2.724,-1.25,1.705E-05, 5.447,7.265,2.302
+		cube = B, 6.192,0.9757,2.104, 6.192,0.7074,2.195, 3.762,0.5902,4.283, 3.762,0.8792,4.232, 7.09,0.8645,1.246, 7.09,0.8648,2.011, -1.19,0.2834,1.752E-05, 2.379,4.204,2.302
+	}	
 }
